@@ -1,8 +1,11 @@
 DIST pl-5.6.64.tar.gz 12019903 RMD160 cb7877456163762c91f118e81f43ce188c2aa38d SHA1 7fd5a27fef1d94644d7d2ea255a414986b3a1d83 SHA256 b0e70c3c02b7753ed440359746e7729d21c93e42689c1f0f32b148167b1b2c66
 DIST pl-5.7.11.tar.gz 12389360 RMD160 3038f2b60147a9902697a09a3705c275b549a2ac SHA1 39574cf2c6a9417c3de97fb5f0e991a27d11f4cb SHA256 b4fb72ef231e66ec18892174a4d60b3c46fe016068bb3c1a5ab3010ec5e44672
+DIST pl-5.7.12.tar.gz 12439841 RMD160 da9a3be45a2f8564f88607926a099a8369ed0815 SHA1 db04b9a8adc42c1f12052ef2b9d1ef535ab4b768 SHA256 354b6d1baa77eee628b56549e0a3a988f2a1db9c3b249b4e669dde35db3b1866
 DIST swi-prolog-5.6.64-gentoo-patchset-6.tar.gz 7850 RMD160 f058fb68ce6257c17fbc548ca4433f098cddf713 SHA1 abf8f65384ee3a22b106e715d0e5b36f816fb85d SHA256 13cc18babc25fc1cdf4e6997612364cefa8d008784591d27346a836724eda6b2
 DIST swi-prolog-5.7.11-gentoo-patchset-0.tar.gz 4693 RMD160 cd4b1b07fcede130e9b1339f6dcb6062751b73de SHA1 417d6912e53c9181e333a1479ac4295f81117d64 SHA256 045be3e5f692c4d64756391d6d116a4a47680687152ce59f2afd8e08790faf0a
+DIST swi-prolog-5.7.12-gentoo-patchset-0.tar.gz 4642 RMD160 941a4a3fcc7ffdf4fc7eca0542bc7c4542290bab SHA1 e7af02efd25fd6748eb42633fbeb4e5845d276b9 SHA256 1e31d859237f34cc0805f40b4857c49b455fd65e4c25b4d4f0e47bee68d93b35
 EBUILD swi-prolog-5.6.64.ebuild 3139 RMD160 2f2918b0da31f580f8e89f88b5247874cad3b29d SHA1 feb8faacc45a779ccca275bafe5d8d7f37080b41 SHA256 7aaf48352d8ce7d5ad4c79e8bd0a1cb08145a97fc7bae623f482399802c16dac
 EBUILD swi-prolog-5.7.11.ebuild 3094 RMD160 df14e6f818d80c0ca7e21703393e1e369d32344b SHA1 8c0d36fb384091f62f57e13f857bc3fb7aa77691 SHA256 919601f1debeb66180aa6d4139392aa4155fbdc5f6696c6796a7f10bd4523f62
-MISC ChangeLog 31079 RMD160 2ecbe860e531c086a104753c41d04271fbda8d21 SHA1 d1a7f94a56b7efa63e710758ba319a4e24c59de5 SHA256 db0ec2819eb37715b7fb5fe1683e194e8eed11f805ce0400368980b2f1814048
+EBUILD swi-prolog-5.7.12.ebuild 3094 RMD160 5c814573ae9c7c0351d99264a16b6f9e5c1546ae SHA1 0dc21f6fac0e83a2a07026cb026ee47cdc1b36c5 SHA256 9c510ce9707a63f3838e4c7ccb27e323c3aa198d858b53f12ff2de36563a7718
+MISC ChangeLog 31206 RMD160 f8320bd42ff0c300f65c684cf34ca8434cd1e633 SHA1 4da94174ca3c1e0ab653d1f34ae4cc45cab85505 SHA256 1460e7ee8a1c67e2542a9c710819c49aaee06bf43521feb95e3c252e1ea9cdee
 MISC metadata.xml 159 RMD160 38d27fd1c5faabedefa5507dfd83cb4c952fbc8c SHA1 52b92682cf41e53e71bf432537a16215bd9546b1 SHA256 851bf218a4283a1d8ea6ef98af0119a40eaa78bfaaec49c2f3440437f52889ba
